@@ -17,6 +17,8 @@ Included
 - Package/extension ZIP metadata extraction deepened for deterministic manifest signals:
 - `.msix/.nupkg/.whl/.jar` manifest text hints are now extracted from ZIP entries (bounded, analysis-only).
 - `.crx/.vsix` now parse `manifest.json` when present in ZIP payloads (permissions/content scripts/update URL domain hints).
+- Document adapter deepened for `.docm/.xlsm`:
+- ZIP structure + relationships are inspected deterministically for macro/embed/external-link indicators.
 - Container scan now emits adapter metadata/signals plus adapter artifacts using the same deterministic contract as safe-run adapters.
 - Container scan evidence remains local-only inspect data and excludes unstable fields (timestamps/raw env/path values).
 - Wave coverage now includes:
